<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="deva.transitiveclosure.MainActivity"
    android:rowCount="8"
    android:columnCount="2"
    android:focusable="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_relation"
        android:id="@+id/textView"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:focusable="false"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:singleLine="true"
        android:textColor="#fb00ff"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView6"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:focusable="false"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cardinality"
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="0"
        android:focusable="false"
        android:textSize="20sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_row="0"
        android:layout_column="1"
        android:entries="@array/spinner_entries"
        android:spinnerMode="dialog"
        android:textAlignment="gravity"
        android:gravity="start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/the_transitive_closure_is"
        android:id="@+id/textView3"
        android:layout_row="5"
        android:layout_column="0"
        android:focusable="false"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/button"
        android:layout_column="1"
        android:layout_row="5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView4"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:focusable="false"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/given_relation_is"
        android:id="@+id/textView5"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:focusable="false"
        android:textSize="20sp" />

</GridLayout>
